--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="containter-fluid ">
+    <app-user-info>Loading </app-user-info>
     <app-top-nav-bar>Loading</app-top-nav-bar>
     <div class="d-flex flex-row">
-
+    
 
         <div class="col-1">
 
