input to database lab8

--- a/src/app/body/home/home.component.html
+++ b/src/app/body/home/home.component.html
@@ -23,8 +23,8 @@
 
 <div class="container-fluid">
         <div class="d-flex flex-row">
-                <div *ngFor="let sale of sales;">
-                        <app-sale-cards price={{sale.price}} imagePath={{sale.imagePath}}>Loading</app-sale-cards>
-                </div>
+                
+                        <app-sale-cards>Loading</app-sale-cards>
+            
         </div>
 </div>
