--- a/src/app/headers/user-info.component.html
+++ b/src/app/headers/user-info.component.html
@@ -3,13 +3,13 @@
     <div class="container-fluid">
         <div class="d-flex flex-row justify-content-between">
             <div class="flex-column">
-                User: {{myInfo.FirstName}} {{myInfo.LastName}}
+                User: {{myInfo.userName}}
             </div>
             <div class="flex-column">
-                Mix ID: {{myInfo.mix_id}}
+                Password: {{myInfo.password}}
             </div>
             <div class="flex-column">
-               <a href={{myInfo.Github}}>Github: {{myInfo.Github}}</a> 
+               
             </div>
         </div>
     </div>
