--- a/src/app/body/login/login.component.html
+++ b/src/app/body/login/login.component.html
@@ -2,4 +2,4 @@
         for now the data in this will just write new users to the DB -->
 
 
-<app-auth>Loading</app-auth>>
+<app-auth>Loading</app-auth>
